cambio select carrito, cambio estilo registro y control de errores y creacion script desaparecer mensaje de error

--- a/assets/css/registro.css
+++ b/assets/css/registro.css
@@ -1,3 +1,15 @@
+#formLogin {
+    font-family: 'Poppins', sans-serif; 
+}
+
+#formLogin label,
+#formLogin input[type="text"],
+#formLogin input[type="password"],
+#formLogin input[type="submit"],
+#formLogin p {
+    font-family: 'Poppins', sans-serif;
+}
+
 #logo {
     display: block;
     margin: 0 auto 20px;
