--- a/assets/css/carrito.css
+++ b/assets/css/carrito.css
@@ -1,7 +1,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #f8f9fa; /* Fondo claro */
-    margin: 0; /* con el margin y el padding no tengo bordes pantalla*/
+    margin: 0;
     padding: 0;
 }
 
