--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,3 +1,9 @@
+body{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 #logo {
     display: block;
     margin: 0 auto 20px;
