--- a/assets/css/registro.css
+++ b/assets/css/registro.css
@@ -1,3 +1,9 @@
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #f7f9fc;
+    margin: 0;
+    padding: 0;
+}
 #formLogin {
     font-family: 'Poppins', sans-serif; 
 }
