--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -5,6 +5,9 @@
     color: white; /* Texto blanco */
     padding: 20px 0;
     box-shadow: 0px -2px 10px rgba(0, 123, 255, 0.2);
+    position: relative;
+    width: 100%;
+    bottom: 0;
 }
 
 .footer-container {
