--- a/assets/css/compraCarrito.css
+++ b/assets/css/compraCarrito.css
@@ -9,55 +9,86 @@ body {
 h1 {
     text-align: center;
     color: #007bff;
+    margin-top: 20px;
 }
 
-.contenedor-recibo {
-    max-width: 800px;
+/* Estilo del contenedor de la tabla */
+.contenedor-tabla {
+    max-width: 900px; /* Ajuste el ancho máximo según sea necesario */
     margin: 50px auto;
     background-color: white;
     padding: 20px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-.recibo-header p {
-    margin: 5px 0;
-    font-weight: 600;
-}
-
-.tabla-recibo {
+/* Estilo de la tabla */
+table {
     width: 100%;
-    margin-top: 20px;
     border-collapse: collapse;
+    margin-top: 20px;
 }
 
-.rtabla-recibo th, .tabla-recibo td {
+thead th {
+    background-color: #007bff;
+    color: white;
+    padding: 10px;
+}
+
+tbody td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: center;
 }
 
-.tabla-recibo th {
-    background-color: #007bff;
-    color: white;
+tbody tr:nth-child(even) {
+    background-color: #f2f2f2; /* Fila par con fondo gris claro */
 }
 
-tfoot td {
+tbody tr:hover {
+    background-color: #e9ecef; /* Cambia el fondo de la fila al pasar el ratón */
+}
+
+/* Estilo del formulario de edición */
+form {
+    margin-top: 30px;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+label {
+    display: block;
+    margin: 10px 0 5px;
     font-weight: bold;
 }
 
-.botonFinalizarCompra {
-    background-color: #28a745;
-    color: white;
-    padding: 15px;
-    border: none;
-    border-radius: 10px;
-    font-size: calc(1.2em + 1vw); /* Tamaño dinámico basado en el ancho de la pantalla */
-    cursor: pointer;
-    margin: 20px auto; /* Márgenes automáticos para centrar */
-    width: 70%; /* Ancho del 50% para que no ocupe todo el espacio */
-    display: block; /* Asegura que se comporte como un bloque para centrado */
+input[type="text"], input[type="email"] {
+    width: calc(100% - 22px); /* Asegura que el input tenga un ancho completo */
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-bottom: 15px;
 }
 
-.botonFinalizarCompra:hover {
-    background-color: #218838;
+button {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3; /* Color al pasar el ratón */
+}
+
+a {
+    margin-left: 10px;
+    text-decoration: none;
+    color: #007bff;
+}
+
+a:hover {
+    text-decoration: underline; /* Subrayar al pasar el ratón */
 }
